--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,59 @@
 
-#nav{
-    float: right;
-}
-#home-header{
+#header{
     text-align: center;
 }
-#register {
+a:hover {
+  color: grey;
+  background-color: transparent;
+  text-decoration: underline;
+}
+#container{
+  width: 20%;
+}
+
+
+/* home page  */
+.home-container{
+  background-color: rgb(219, 219, 219);
+  height: 600px;
+}
+.marquee{
+  background-color: rgb(192, 192, 192);
+}
+hr{
+  background-color: rgb(192, 192, 192);
+}
+.footer-class{
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+.home-name::first-letter{
+  color: #242424;
+  font-size: 60px;
+  font-family: "Algerian", sans-serif;
+}
+
+
+/* login page */
+.login-body{
+  background-color: rgb(230, 146, 255);
+}
+.login-container{
+  width: 500px;
+  height: 300px;
+  margin: 130px 0 0 400px;
+  background-color: rgb(224, 221, 221);
+  border-radius: 4px;
+  box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.2);
+}
+
+
+/* register page  */
+.register-body{
+  background-color: rgb(162, 146, 253);
+}
+.register {
   background-color: #fff;
   width: 35%;
   margin: 30px auto;
@@ -13,35 +61,57 @@
   border-radius: 4px;
   box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.2);
 }
+.register-form{
+  margin-left: 80px;
+  margin-top: 25px;
+}
+.register-button{
+  padding: 6px 16px 6px 16px;
+  border: none;
+  background-color: rgb(162, 146, 253);
+}
+.register-button:hover{
+  background-color: #fff;
+  border: 2px solid rgb(11, 9, 20);
+  border-color: rgb(162, 146, 253);
+}
 
-/* a:link {
-    color: green;
-    background-color: transparent;
-    text-decoration: none;
-  } */
-  /* a:visited {
-    color: pink;
-    background-color: transparent;
-    text-decoration: none;
-  } */
-  a:hover {
-    color: grey;
-    background-color: transparent;
-    text-decoration: underline;
-  }
-  /* a:active {
-    color: yellow;
-    background-color: transparent;
-    text-decoration: underline;
-  } */
-#login-pg{
-    color: white;
+
+/* academics page  */
+.academics-body{
+  background-color: rgb(148, 255, 163);
 }
-.footer-class{
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
+.academics-container{
+  background-color: #fff;
+  width:80%;
+  margin-left: 120px;
+  margin-top: 20px;
 }
-#container{
-  width: 20%;
+.academics-text{
+  margin-left: 30px;
 }
+.academics-table{
+  margin-left: 250px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  width: 50%;
+}
+.academics-table th,
+.academics-table td{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+.academics-skills{
+  margin-left: 270px;
+}
+.academics-left,
+.academics-right{
+  width: 30%;
+  margin-left: 10px;
+  border: 3px solid rgb(148, 255, 163);
+}
+.academics-skills{
+  display: flex;
+  flex-direction: row;
+}
+
